app/assets/stylesheets/easy_menu.css.scss
/*
* This is a manifest file that'll automatically include all the stylesheets available in this directory
* and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
* the top of the compiled file, but it's generally better to create a new file per style scope.
*= require_self
*/

@import 'easy_menu_mixins';

// STYLES
.menu_bar.default_theme{
  display: block;
  margin: 0 (-$menu-bar-item-spacing / 2);
  padding: 0;
  list-style: none;
  height: $menu-bar-height;
  position: relative;
  z-index: 0; // Scope all positioned elements z-index within the menu so they don't move above or below other page elements, only each other

  // MENU BAR_GROUP
  .menu_bar_group{
    padding: 0;
    margin: 0;

    .menu_bar_content{
      margin-right: 0;
      margin-left: -1px;

      .menu_bar_item{
        border-radius: 0;
      }
    }

    .menu_bar_content:first-child{
      .menu_bar_item{
        border-top-left-radius: $menu-bar-item-border-radius;
        border-bottom-left-radius: $menu-bar-item-border-radius;
      }
    }
    .menu_bar_content:last-child{
      .menu_bar_item{
        border-top-right-radius: $menu-bar-item-border-radius;
        border-bottom-right-radius: $menu-bar-item-border-radius;
      }
    }

  }

  // MENU BAR CONTENT
  .menu_bar_content{
    display: inline-block;
    vertical-align: middle;
    margin: 0 ($menu-bar-item-spacing / 2);

    // MENU BAR ITEMS
    .menu_bar_item{
      @include menu_bar_item;
      @include no-select;
      @include no-drag;
    }

    // MENU BAR SEPARATOR
    .menu_bar_separator{
      background-color: #AAA;
      border-right: 1px solid #F7F7F7;
      opacity: 0.5;
      display: inline-block;
      height: $menu-bar-separator-height;
      padding-right: 1px;
      vertical-align: middle;
    }

    // MENUS
    .menu{
      background: none repeat scroll 0 0 white;
      @include menu-bar-item-border;
      border-radius: 0 0 2px 2px;
      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
      list-style: none outside none;
      margin-top: -$menu-border-width - $menu-bar-item-border-width; // Make the button appear to be part of the clicked trigger button
      padding: $menu-vertical-padding 0;
      position: absolute;
      display: none;
      min-width: 100%; // Don't be narrower than the menu bar trigger

      .menu_content{
        display: block;
        padding: 0;
        margin: 0;
        position: relative;

        .menu_item{
          @include menu_item;
        }
        .menu_group_title{
          @include menu_item_base;
          cursor: default; // Don't use the pointer cursor from menu_item_base
          background: none repeat scroll 0 0 #EEEEEE;
          color: #888888;
          font-weight: bold;
          margin: $menu-item-vertical-padding 0;
          white-space: nowrap;
        }
        .menu_group{
          padding: 0;
          margin: 0;
        }

        .menu_separator{
          border-top: 1px solid #E0E0E0;
          margin: $menu-item-vertical-padding 0;
        }

      }

      // Subsequent menu groups
      .menu_content + .menu_content .menu_group_title{
        border-top: 1px solid #E0E0E0;
        margin-top: $menu-item-vertical-padding;
      }

    }
    &.with_menu {
      .menu_bar_item .arrow{
        @include easy_menu_icon(5, center);
        margin: -12px -9px -12px -4px;
        padding: 24px 14px 0 0;
        vertical-align: middle;
        width: 10px;
        display: inline-block;
        vertical-align: middle;
      }
    }
    &.with_menu.no_js:hover, &.with_menu.open{
      .menu_bar_item {
        background: white;
        border-radius: 2px 2px 0 0;
        @include menu-bar-item-border-colour-with-fallback;
        border-bottom: none;
        margin-bottom: $menu-bar-item-border-width; // Make up for the loss of border so the button doesn't shift
        box-shadow: none;
      }

      z-index: $menu-bar-item-pressed-zindex + 2; // Position all the contents of this menu_content above any other menu bar item (the pressed item being the highest)
      .menu {
        display: block;
      }
    }

    // Allow right alignment of buttons
    &.right{
      float: right;

      .menu {
        right: 0;
      }
    }

    // CLICK BLOCKER (only appears if the element is disabled)
    position: relative; // So click blocker can fill the button area
    .disabled + .click_blocker{
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: $menu-bar-item-zindex + 3;
    }

    // INPUTS IN THE MENU
    form{
      display: inline-block;
    }
    input[type=search]{
      @include text-field;
      -webkit-appearance: textfield;
      -webkit-padding-start: 0;
      -webkit-padding-end: 0;
    }
    input[type=text]{
      @include text-field;
    }

    .menu_bar_item{
      input[type='checkbox']{
        // Make input align properly when used in the menu bar, especially if used in a menu trigger in IE.
        margin: 0;
        display: inline-block;
        vertical-align: top;
        height: $menu-bar-item-height;
      }
      select{
        @include menu_bar_item_base;
        // @include menu_bar_item_hover;
        height: $menu-bar-height;
        font: $menu-bar-font;
        padding: 0.4em;

        option{
          text-shadow: none;
          padding: 0.4em;
        }
      }
    }
  }
}
.menu_bar.toggle_menu{
  .menu_bar_content:first-child .menu_bar_item{
    border-top-left-radius: 14px;
    border-bottom-left-radius: 14px;
  }
  .menu_bar_content:last-child .menu_bar_item{
    border-top-right-radius: 14px;
    border-bottom-right-radius: 14px;
  }
}

